--- a/boot/grub.cfg
+++ b/boot/grub.cfg
@@ -1,7 +1,7 @@
 set default=0
-set timeout=0
+set timeout=3
 
 menuentry "MyOS" {
-	multiboot2 /boot/kernel.elf
+	multiboot /boot/kernel.elf
 	boot
 }
